[gd_scene load_steps=11 format=3 uid="uid://cyvduwn6p22kh"]

[ext_resource type="Texture2D" uid="uid://ceot7v4hiqpiw" path="res://assets/textures/dev/grids/Dark/texture_07.png" id="1_qnl17"]
[ext_resource type="Texture2D" uid="uid://co2mbmhw5lppr" path="res://assets/hdris/kloofendal_48d_partly_cloudy_puresky_2k.hdr" id="2_u65b8"]
[ext_resource type="Script" path="res://scripts/player.gd" id="3_k4d3e"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7y2xg"]
albedo_texture = ExtResource("1_qnl17")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8wmen"]
albedo_texture = ExtResource("1_qnl17")
uv1_triplanar = true

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_wc2v1"]
panorama = ExtResource("2_u65b8")

[sub_resource type="Sky" id="Sky_rgv1h"]
sky_material = SubResource("PanoramaSkyMaterial_wc2v1")

[sub_resource type="Environment" id="Environment_mjmsq"]
background_mode = 2
sky = SubResource("Sky_rgv1h")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jb6bp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_neltk"]
height = 1.2

[node name="World" type="Node3D"]

[node name="stage" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_7y2xg")

[node name="CSGBox3D2" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05459, 12.2392)
use_collision = true
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_7y2xg")

[node name="CSGBox3D3" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.41851, 2.47247, -4.13991)
use_collision = true
size = Vector3(5, 5, 5)
material = SubResource("StandardMaterial3D_8wmen")

[node name="CSGBox3D4" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.59003, 5.90896, -4.14939)
use_collision = true
size = Vector3(5, 5, 5)
material = SubResource("StandardMaterial3D_8wmen")

[node name="CSGBox3D5" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.59003, 7.4066, -16.3328)
use_collision = true
size = Vector3(5, 5, 5)
material = SubResource("StandardMaterial3D_8wmen")

[node name="CSGBox3D6" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14807, 11.2739, -19.2113)
use_collision = true
size = Vector3(5, 5, 5)
material = SubResource("StandardMaterial3D_8wmen")

[node name="CSGBox3D7" type="CSGBox3D" parent="stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.1269, 14.567, -19.2127)
use_collision = true
size = Vector3(5, 5, 5)
material = SubResource("StandardMaterial3D_8wmen")

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_mjmsq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(0.867765, -0.446677, 0.217859, 0, 0.438371, 0.898794, -0.496974, -0.779942, 0.380403, 0, 0, 0)
shadow_enabled = true

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00737619, 0.0509773, -0.115879)
script = ExtResource("3_k4d3e")

[node name="standing_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_jb6bp")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.592112, 0)
shape = SubResource("CapsuleShape3D_neltk")

[node name="give_head" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="player/give_head"]

[node name="RayCast3D" type="RayCast3D" parent="player"]
target_position = Vector3(0, 2, 0)
